[Refactor] 시장, 상점, 상품 S3 이미지 삭제 시 기본이미지 제외 (#142)